Add display functionality

--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@ body {
   background-color: black;
   padding: 1.5%;
 }
-.display {
+#display {
   height: 30vh;
   color: white;
   display: flex;
